--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.14.0",
 		"@typescript-eslint/parser": "^8.14.0",
 		"builtin-modules": "^4.0.0",
-		"esbuild": "0.24.0",
+		"esbuild": ">=0.25.0",
 		"esbuild-plugin-copy": "2.1.1",
 		"jsdom": "^24.0.0",
 		"svelte": "^5.2.10",
@@ -64,7 +64,7 @@
 		"vite": "^6.0.1",
 		"vite-plugin-static-copy": "^2.2.0",
 		"vite-tsconfig-paths": "^5.1.3",
-		"vitest": "^2.1.6",
+		"vitest": ">=2.1.9",
 		"ua-parser-js": "^1.0.39"
 	}
 }
